# MDNotebook-GTK

./: Cargo.toml  README.md
data/: com.mdnotebook.NativeEditor.desktop
releases/: mdnotebook_0.1.0-1_amd64.deb
snap/: snapcraft.yaml
src/: main.rs  markdown.rs  preview.rs  signals.rs  state.rs  style.css  vault.rs  wysiwyg.rs
src/ui/: dialogs.rs  toolbar.rs  types.rs  window.rs
