[package]
name = "mdnotebook"
version = "0.1.0"
edition = "2021"
description = "Private, encrypted markdown notebook for Linux"

[dependencies]
gtk = { package = "gtk4", version = "0.9" }
adw = { package = "libadwaita", version = "0.7", features = ["v1_5"] }
sourceview5 = "0.9"
gdk-pixbuf = "0.20"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
hmac = "0.12"
rand = "0.8"
base64 = "0.22"
dirs = "5"
pulldown-cmark = "0.12"
zeroize = { version = "1", features = ["derive"] }

[package.metadata.deb]
maintainer = "iamalexandre <carrascoamm@gmail.com>"
copyright = "2025 iamalexandre"
license-file = ["LICENSE", "0"]
depends = "libgtk-4-1 (>= 4.12), libadwaita-1-0 (>= 1.4), libgtksourceview-5-0 (>= 5.0), libgdk-pixbuf-2.0-0"
section = "utils"
priority = "optional"
assets = [
    ["target/release/mdnotebook", "usr/bin/", "755"],
    ["data/icons/hicolor/512x512/apps/com.mdnotebook.editor.png", "usr/share/icons/hicolor/512x512/apps/", "644"],
    ["data/com.mdnotebook.NativeEditor.desktop", "usr/share/applications/", "644"],
    ["README.md", "usr/share/doc/mdnotebook/", "644"],
]
